Adding new class profile and change img border

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <section>
         <h2>Hello, I'm Bandana Pachabhaiya Magar!</h2>
         <p>Welcome to my personal website. I'm passionate about web development, and I'm excited to share my journey with you. Explore the different pages to learn more about me, my experiences, and the skills I've developed along the way.</p>
-        <img src="pp.jpg" alt="Bandana's Profile Picture">
+        <div class="profile">
+            <img src="pp.jpg" alt="Bandana's Profile Picture">
+        </div>
     </section>
 
     <footer>
