--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
     </header>
 
     <section>
-        <h2>Hello, I'm Bandana Pachabhaiya Magar!</h2>
-        <p>Welcome to my personal website. I'm passionate about web development, and I'm excited to share my journey with you. Explore the different pages to learn more about me, my experiences, and the skills I've developed along the way.</p>
+        
         <div class="profile">
-            <img src="pp.jpg" alt="Bandana's Profile Picture">
+            <div>
+                <img src="pp.jpg" alt="Bandana's Profile Picture">
+            </div>
+            <div class="profile-right">
+                <h2>Hello, I'm Bandana Pachabhaiya Magar!</h2>
+                <p>Welcome to my personal website. I'm passionate about web development, and I'm excited to share my journey with you. Explore the different pages to learn more about me, my experiences, and the skills I've developed along the way.</p>
+            </div>
+            
         </div>
     </section>
 
