Add table content

--- a/about.html
+++ b/about.html
@@ -36,6 +36,11 @@
                 <td>Bachelor's Degree</td>
                 <td>National College of Engineering</td>
             </tr>
+            <tr>
+                <td>2023-2025</td>
+                <td>Post Graduate</td>
+                <td>Lambton College</td>
+            </tr>
         </table>
     </section>
 
