--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024. All rights reserved.</p>
     </footer>
 </body>
 
