--- a/skills.html
+++ b/skills.html
@@ -40,7 +40,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024. All rights reserved.</p>
     </footer>
 </body>
 
