--- a/index.html
+++ b/index.html
@@ -21,21 +21,13 @@
     </header>
 
     <section>
-        
-        <div class="profile">
-            <div>
-                <img src="pp.jpg" alt="Bandana's Profile Picture">
-            </div>
-            <div class="profile-right">
-                <h2>Hello, I'm Bandana Pachabhaiya Magar!</h2>
-                <p>Welcome to my personal website. I'm passionate about web development, and I'm excited to share my journey with you. Explore the different pages to learn more about me, my experiences, and the skills I've developed along the way.</p>
-            </div>
-            
-        </div>
+        <h2>Hello, I'm Bandana Pachabhaiya Magar!</h2>
+        <p>Welcome to my personal website. Explore the different pages to learn more about me and my journey.</p>
+        <img src="pp.jpg" alt="Bandana's Profile Picture">
     </section>
 
     <footer>
-        <p>&copy; 2024. All rights reserved.</p>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
 
